[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["git-alice <art.oxbow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.85.0", extras = ["all"]}
web3 = "^5.30.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
